--- a/gradle/vertx.gradle
+++ b/gradle/vertx.gradle
@@ -36,8 +36,8 @@ archivesBaseName = modname
 
 defaultTasks = ['assemble']
 
-sourceCompatibility = '1.7'
-targetCompatibility = '1.7'
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 project.ext.moduleName = "$modowner~$modname~$version"
 
@@ -58,9 +58,9 @@ repositories {
 }
 
 dependencies {
-  provided "io.vertx:vertx-core:$vertxVersion"
-  provided "io.vertx:vertx-platform:$vertxVersion"
-  provided "io.vertx:vertx-hazelcast:$vertxVersion"
+  compile "io.vertx:vertx-core:$vertxVersion"
+  compile "io.vertx:vertx-platform:$vertxVersion"
+  compile "io.vertx:vertx-hazelcast:$vertxVersion"
   testCompile "junit:junit:$junitVersion"
   testCompile "io.vertx:testtools:$toolsVersion"
 }
@@ -88,6 +88,7 @@ buildscript {
 
     // Users can be Vert.x platform classpath files (e.g. langs.properties) in either src/main/platform_lib
     // or src/main/resources/platform_lib (if they want it in the module for fatjars)
+
     classpath files(['src/main/platform_lib'])
     classpath fileTree(dir: 'src/main/platform_lib', includes: ['*.jar', '*.zip'])
     classpath files(['src/main/resources/platform_lib'])
